benchmark mongodb vs redis
